[gd_scene load_steps=7 format=2]

[ext_resource path="res://Tiles/SpeedTiles.png" type="Texture" id=1]
[ext_resource path="res://RedPlataform.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Indicador.png" type="Texture" id=3]
[ext_resource path="res://Plataforms/Indicador.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 360, 120 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 330, 120 )

[node name="RedPlataform" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1.52588e-05, -1.33514e-05 )
scale = Vector2( 3.9779, 1.34078 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( -1.16438, -1.18504, 181.777, 179.124 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
one_way_collision = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -30 )
shape = SubResource( 2 )

[node name="Indicador" type="Sprite" parent="."]
texture = ExtResource( 3 )
script = ExtResource( 4 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 36, 12 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
